# shell-agent

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
.github/workflows/: lint.yml  shellcheck.yml  test.yml  typecheck.yml
src/shell_agent/: __init__.py  shell_coding_agent.py
tests/: conftest.py  test_shell_coding_agent.py
