[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aofire-shell-agent"
version = "0.0.1"
description = "Claude-powered shell script coding agent with POSIX sh defaults and shellcheck/shfmt gates"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [
    {name = "Ed Hodapp", email = "ed@hodapp.com"},
]
dependencies = [
    "aofire-python-agent>=0.1.1",
    "claude-agent-sdk",
    "pydantic>=2.12",
]

[project.optional-dependencies]
dev = [
    "flake8-pyproject",
    "hypothesis",
    "mutmut<3",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
aofire-shell-coding-agent = "shell_agent.shell_coding_agent:main"

[project.urls]
Homepage = "https://github.com/edhodapp/shell-agent"
Repository = "https://github.com/edhodapp/shell-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shell_agent = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-complexity = 5
max-line-length = 99

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.mutmut]
paths_to_mutate = "src/shell_agent/"
runner = ".venv/bin/python -m pytest"
